connect hasan al naser with backend

--- a/src/jsx/pages/HomePage/style.scss
+++ b/src/jsx/pages/HomePage/style.scss
@@ -54,12 +54,8 @@
 .h-10rem{
     height: 10rem !important;
 }
-.public-DraftEditor-content > div{
-    border: 1px solid #dedede;
-    border-radius: 4px;
-    padding: 12px;
-    height: 93%;
-}
 .editorClassName{
-    padding: 0!important;
+    padding: 12px !important;
+    border: 1px solid #dedede;
+    border-radius: 8px;
 }
