--- a/src/jsx/pages/MasterHN/StaticPages/style.scss
+++ b/src/jsx/pages/MasterHN/StaticPages/style.scss
@@ -11,7 +11,7 @@
    
 }
 .description{
-    // border: 1px solid hsl(0, 0%, 80%);
+    border: 1px solid hsl(0, 0%, 80%);
     padding: 6px 12px;
     width: 100%;
     border-radius: 0.3rem;
@@ -34,7 +34,7 @@
     height: 13rem!important;
 }
 .editorField{
-    // border: 1px solid #dedede;
+    border: 1px solid #dedede;
     border-radius: 8px;
     padding: 1rem 0.5rem;
 }
