--- a/src/jsx/pages/MasterHN/Products/style.scss
+++ b/src/jsx/pages/MasterHN/Products/style.scss
@@ -1,12 +1,12 @@
 .add-product{
     .image-placeholder{
         .avatar-preview{
-            height: 14rem !important;
+            height: 9rem !important;
         }
         .delete-img{
             position: absolute;
-            top: 16px;
-            right: 16px;
+            top: 10px;
+            right: 10px;
             padding: 2px 6px;
             z-index: 1;
             background: #fff;
@@ -20,6 +20,14 @@
         img{
             border-radius: 30px;
         }
+    }
+    .add-more-items{
+        color: #dedede;
+        background: none;
+        font-size: 32px;
+        border: 2px solid #dedede;
+        border-radius: 50%;
+        padding: 8px 16px;    
     }
 }
 .css-1nmdiq5-menu{
