--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15725,7 +15725,7 @@ html[dir="rtl"]
 .deznav .metismenu li {
   position: relative;
   border-radius: 16px;
-  margin-bottom: 14px;
+  /* margin-bottom: 14px; */
 }
 .deznav .metismenu li:last-of-type {
   margin-bottom: 0;
@@ -43788,7 +43788,7 @@ code {
   font-size: 16px;
   font-weight: 300;
   white-space: nowrap;
-  padding: 20px 20px;
+  padding: 20px 9px;
   letter-spacing: 0.5px;
   border-color: #eee;
 }
