--- a/src/jsx/pages/MasterHN/Orders/style.scss
+++ b/src/jsx/pages/MasterHN/Orders/style.scss
@@ -22,3 +22,14 @@
         }
     }
 }
+.address-model{
+    p{
+        color: #000;
+        margin: 0;
+    }
+    label{
+        color: #7E7E7E;
+        margin: 0;
+        width: 50%;
+    }
+}
