--- a/src/jsx/index.css
+++ b/src/jsx/index.css
@@ -327,6 +327,7 @@ ol.go2441762052 {
   border-top: 0 !important;
   border-left: 0 !important;
   border-right: 0 !important;
+  padding: 0 !important;
 }
 .rdw-dropdown-selectedtext{
   direction: ltr;
