--- a/src/jsx/pages/MasterHN/Products/style.scss
+++ b/src/jsx/pages/MasterHN/Products/style.scss
@@ -39,13 +39,9 @@
     margin-top: 3px;
     color: #fff;
 }
-  
-.wrapperClassName{
-    height: 400px
-}
 .editorClassName{
     padding: 12px !important;
-    border: 1px solid #dedede;
+    // border: 1px solid #dedede;
     border-radius: 8px;
 }
 .tabs-div {
