--- a/src/jsx/pages/Products/style.scss
+++ b/src/jsx/pages/Products/style.scss
@@ -33,11 +33,11 @@
 }
   
 .wrapperClassName{
-    height: 400px
+    height: 400px;
+    border: 1px solid #dedede;
 }
 .editorClassName{
     padding: 12px !important;
-    border: 1px solid #dedede;
     border-radius: 8px;
 }
 .tabs-div {
